tests/local/invalid-funcref-in-data-segment.wast
(assert_invalid
  (module
    (memory 0)
    (func $f)
    (data (ref.func $f) ""))
  "type mismatch")
